# othello

./: CMakeLists.txt  main.c
core/: defs.h
core/bitboard/: bitboard.c  bitboard.h
core/board/: board.c  board.h  hash.c
core/movegen/: movegen.c  movegen.h
core/player/: player.c  player.h
engine/: engine.c  engine.h
engine/eval/: eval.c  eval.h
engine/tt/: tt.c  tt.h
gen_data/: gen_data.c  gen_data.h
